--- a/wui/courses.html
+++ b/wui/courses.html
@@ -2,15 +2,33 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Kursused</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css"/>
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-sm navbar-green flex-nowrap py-0">
+        <div class="container">
+            <button class="navbar-toggler mr-2" type="button" data-toggle="collapse" data-target="#topnav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <span class="navbar-brand w-100">Logo</span>
+            <div class="navbar-collapse collapse w-100 justify-content-center" id="topnav">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">KURSUSED</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="w-100"><!--spacer--></div>
+        </div>
+    </nav>
 
-
-
-
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
