--- a/wui/answer.html
+++ b/wui/answer.html
@@ -38,21 +38,29 @@
             </ol>
         </nav>
         <div class="card mb-5">
-                    <ul class="nav nav-tabs justify-content-center">
-                            <li class="nav-item"><a class="nav-link active" href="#">Ülesanne 1</a></li>
-                            <li class="nav-item"><a class="nav-link" href="answer.html">Esitamine</a></li>
-                            <li class="nav-item"><a class="nav-link" href="answers.html">Minu esitused</a></li>
-                        </ul>
+            <ul class="nav nav-tabs justify-content-center">
+                <li class="nav-item"><a class="nav-link" href="exercise.html">Ülesanne 1</a></li>
+                <li class="nav-item"><a class="nav-link active" href="#">Esitamine</a></li>
+                <li class="nav-item"><a class="nav-link" href="answers.html">Minu esitused</a></li>
+            </ul>
             <div class="card-body">
-                <div class="exercise-info">
-                    <b class="subheading">Tähtaeg:</b> dd.mm.yyyy hh:mm</br>
-                    <b class="subheading">Hindamine:</b> automaatne</br>
-                    <b class="subheading">Lävend:</b> 50%
-                </div>
-                <div class="exercise mt-4">
-                    <h2 class="mb-4">Ülesanne 1. Lorem ipsum</h2>
+                <div class="answer-feedback mb-4">
+                    <h2 class="mb-4">Tagasiside</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis consectetur diam. Mauris semper placerat metus maximus faucibus. Cras ut ante in sapien pulvinar aliquam. Maecenas elementum tortor id nulla imperdiet auctor. Nullam facilisis a nisl sit amet consequat. Nunc sodales, lorem sollicitudin efficitur dapibus, magna lorem tincidunt sem, non lacinia est diam eu sapien. Vivamus quis porttitor odio, nec gravida ipsum. Sed purus nulla, elementum in mauris ut, molestie dictum enim.</p>
-                    <p>Morbi et leo eu eros lobortis vulputate et at neque. Aenean rutrum vulputate scelerisque. Vestibulum interdum ipsum vel diam pharetra tristique. Vivamus tempor laoreet pellentesque. Cras dapibus libero tortor, sit amet luctus elit tempus nec. Fusce et elit volutpat eros bibendum feugiat. In vitae congue elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent vestibulum leo nec ligula venenatis laoreet. Aenean ut risus nec est pellentesque aliquam. Pellentesque pharetra pretium est, quis maximus odio varius ut. In hac habitasse platea dictumst. Sed dictum dignissim lacinia. Duis in pulvinar risus, id sollicitudin quam. Cras in eros nulla.</p>
+                    <div class="answer-grade">
+                        Hinne: 90/100
+                    </div>
+                </div>
+                <div class="answer container">
+                    <form>
+                        <div class="form-group">
+                            <label for="answerform"><h2><a href="#"><i class="fas fa-download"></i></a> <a href="#"><i class="fas fa-upload"></i></a></h2></label>
+                            <textarea class="form-control" id="answerform" rows="10"></textarea>
+                        </div>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-success mb-2">Esita</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
