wui roboto font link

--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -6,6 +6,7 @@
     <title>Ülesanne</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/codemirror.css"/>
     <link rel="stylesheet" href="css/main.css"/>
 </head>
@@ -35,8 +36,8 @@
     </nav>
 
     <div class="card">
-        <div class="card-tabs">
-            <ul id="tabs" class="tabs tabs-fixed-width">
+        <div class="card-tabs center-align">
+            <ul id="tabs" class="tabs">
                 <li class="tab"><a href="#exercise">Ülesanne 1</a></li>
                 <li class="tab active"><a href="#answer">Esitamine</a></li>
                 <li class="tab"><a href="#answers">Minu esitused</a></li>
