improved exercise design

--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Ülesanne</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/codemirror.css"/>
     <link rel="stylesheet" href="css/main.css"/>
 </head>
@@ -16,8 +16,9 @@
     <div class="container">
         <div class="nav-wrapper">
             <a href="#" class="brand-logo left">Logo</a>
-            <ul id="nav-mobile" class="center hide-on-med-and-down">
-                <li><a class="nav-link" href="courses.html">KURSUSED</a></li>
+            <ul id="nav-mobile" class="hide-on-med-and-down">
+                <li><a class="nav-link" href="courses.html">Kursused</a></li>
+                <li><a class="nav-link" href="courses.html">Abi</a></li>
             </ul>
         </div>
     </div>
@@ -29,8 +30,7 @@
             <div class="col s12">
                 <a href="#!" class="breadcrumb">Kursused</a>
                 <a href="#!" class="breadcrumb">Programmeerimine</a>
-                <a href="#!" class="breadcrumb">Ülesanded</a>
-                <a href="#!" class="breadcrumb">Ülesanne 1</a>
+                <a href="#!" class="breadcrumb">Ülesanne 1. Lorem ipsum</a>
             </div>
         </div>
     </nav>
@@ -38,7 +38,7 @@
     <div class="card">
         <div class="card-tabs center-align">
             <ul id="tabs" class="tabs">
-                <li class="tab"><a href="#exercise">Ülesanne 1</a></li>
+                <li class="tab"><a href="#exercise">Ülesanne</a></li>
                 <li class="tab active"><a href="#answer">Esitamine</a></li>
                 <li class="tab"><a href="#answers">Minu esitused</a></li>
             </ul>
@@ -46,9 +46,9 @@
         <div class="card-content bt">
             <div id="exercise">
                 <div class="exercise-info">
-                    <b class="subheading">Tähtaeg:</b> dd.mm.yyyy hh:mm</br>
-                    <b class="subheading">Hindamine:</b> automaatne</br>
-                    <b class="subheading">Lävend:</b> 50%
+                    <p> <span class="subheading">Tähtaeg: </span>  18. detsember, 21:07</p>
+                    <p> <span class="subheading">Hindamine: </span> automaatne</p>
+                    <p> <span class="subheading">Lävend:</span> 50%</p>
                 </div>
                 <div class="exercise">
                     <h2>Ülesanne 1. Lorem ipsum</h2>
