--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -15,12 +15,15 @@
 <nav class="nav-center" role="navigation">
     <div class="container">
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo left">Logo</a>
+            <a href="#" id="logo" class="brand-logo left">Logo</a>
             <ul id="nav-mobile" class="hide-on-med-and-down">
                 <li><a class="nav-link" href="courses.html">Kursused</a></li>
                 <li><a class="nav-link" href="courses.html">Abi</a></li>
             </ul>
         </div>
+    </div>
+    <div id="account" class="valign-wrapper">
+        <a href="#"><i id="account-logo" class="right material-icons">account_circle</i><span>Karmen</span></a>
     </div>
 </nav>
 
@@ -46,9 +49,9 @@
         <div class="card-content bt">
             <div id="exercise">
                 <div class="exercise-info">
-                    <p> <span class="subheading">Tähtaeg: </span>  18. detsember, 21:07</p>
-                    <p> <span class="subheading">Hindamine: </span> automaatne</p>
-                    <p> <span class="subheading">Lävend:</span> 50%</p>
+                    <p><span class="subheading">Tähtaeg: </span> 18. detsember, 21:07</p>
+                    <p><span class="subheading">Hindamine: </span> automaatne</p>
+                    <p><span class="subheading">Lävend:</span> 50%</p>
                 </div>
                 <div class="exercise">
                     <h2>Ülesanne 1. Lorem ipsum</h2>
