--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -22,7 +22,7 @@
             </ul>
         </div>
     </div>
-    <div id="account" class="valign-wrapper">
+    <div id="account">
         <a href="#"><i id="account-logo" class="right material-icons">account_circle</i><span>Karmen</span></a>
     </div>
 </nav>
