--- a/wui/html/exercises.html
+++ b/wui/html/exercises.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="../css/main.css"/>
 </head>
 
 <body>
 
 
-<script src="js/main.js"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
