wui logo png -> svg

--- a/wui/courses.html
+++ b/wui/courses.html
@@ -19,7 +19,7 @@
 <nav class="nav-center" role="navigation">
     <div class="container">
         <div class="nav-wrapper">
-            <a href="/" class="brand-logo left"><img class="logo-img" src="img/main-logo.png" alt="Lahendus"/></a>
+            <a href="/" class="brand-logo left"><img class="logo-img" src="img/main-logo.svg" alt="Lahendus"/></a>
             <ul id="nav-mobile" class="center hide-on-med-and-down">
                 <li><a class="nav-link" href="courses.html">KURSUSED</a></li>
             </ul>
@@ -46,6 +46,7 @@
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="https://idp.lahendus.ut.ee/auth/js/keycloak.js"></script>
 <!--
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 -->
