wui course list

--- a/wui/courses.html
+++ b/wui/courses.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="css/pace.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/solid.css"
-          integrity="sha384-COsgLGwf6vbsibKzWojSqhIjQND/Sa0RWQ5BHFrKOz5JrUObnh5GEBUH2oZwITuM" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/fontawesome.css"
-          integrity="sha384-J4287OME5B0yzlP80TtfccOBwJJt6xiO2KS14V7z0mVCRwpz+71z7lwP4yoFbTnD" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css"/>
 </head>
 
@@ -21,7 +18,7 @@
         <div class="nav-wrapper">
             <a href="/" class="brand-logo left"><img class="logo-img" src="img/main-logo.svg" alt="Lahendus"/></a>
             <ul id="nav-mobile" class="center hide-on-med-and-down">
-                <li><a class="nav-link" href="courses.html">KURSUSED</a></li>
+                <li><a class="nav-link" href="courses.html">Kursused</a></li>
             </ul>
         </div>
     </div>
@@ -29,18 +26,11 @@
 
 <div class="container">
 
-
-
-
     <div id="exercise-list" class="collection">
-        <a href="/exercises.html?exercise-id=1" class="collection-item">Programmeerimine</a>
+        <a href="/exercises.html?exercise-id=1" class="collection-item course-item">Programmeerimine</a>
     </div>
 
-
-
 </div>
-
-
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
