wui courses page profile logo

--- a/wui/courses.html
+++ b/wui/courses.html
@@ -22,6 +22,9 @@
             </ul>
         </div>
     </div>
+    <div id="account">
+        <a href="#"><i id="account-logo" class="left material-icons">account_circle</i><span>Karmen</span></a>
+    </div>
 </nav>
 
 <div class="container">
