wui exercise page add pageid

--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/main.css"/>
 </head>
 
-<body>
+<body data-pageid="exercise">
 <nav class="nav-center" role="navigation">
     <div class="container">
         <div class="nav-wrapper">
