wui exercise page profile avatar right -> left

--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div id="account">
-        <a href="#"><i id="account-logo" class="right material-icons">account_circle</i><span>Karmen</span></a>
+        <a href="#"><i id="account-logo" class="left material-icons">account_circle</i><span>Karmen</span></a>
     </div>
 </nav>
 
