--- a/wui/courses.html
+++ b/wui/courses.html
@@ -28,12 +28,14 @@
 </nav>
 
 <div class="container">
-
-    <div id="exercise-list" class="collection">
-        <a href="/exercises.html?exercise-id=1" class="collection-item course-item">Programmeerimine</a>
+    <div class="card">
+        <div id="exercise-list" class="collection">
+            <a href="/exercises.html?exercise-id=1" class="collection-item course-item">Programmeerimine</a>
+            <a href="/exercises.html?exercise-id=2" class="collection-item course-item">Tarkvaraarendus</a>
+        </div>
     </div>
-
 </div>
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
