--- a/wui/courses.html
+++ b/wui/courses.html
@@ -13,32 +13,42 @@
 </head>
 
 <body data-pageid="courses">
+
 <nav class="nav-center" role="navigation">
     <div class="container">
         <div class="nav-wrapper">
             <a href="/" class="brand-logo left"><img class="logo-img" src="img/main-logo.svg" alt="Lahendus"/></a>
-            <ul id="nav-mobile" class="center hide-on-med-and-down">
+            <ul id="nav-mobile" class="hide-on-med-and-down">
                 <li><a class="nav-link" href="courses.html">Kursused</a></li>
+                <li><a class="nav-link" href="courses.html">Abi</a></li>
             </ul>
         </div>
     </div>
-    <div id="account">
-        <a href="#"><i id="account-logo" class="left material-icons">account_circle</i><span>Karmen</span></a>
+    <div id="profile-wrapper" class="dropdown-trigger" data-target="profile-dropdown">
+        <a href="#!" >
+            <i id="profile-logo" class="left material-icons">account_circle</i><span id="profile-name">Kasutaja</span>
+        </a>
     </div>
 </nav>
 
+<!-- Profile dropdown menu structure -->
+<ul id="profile-dropdown" class="dropdown-content">
+    <li><a href="https://idp.lahendus.ut.ee/auth/realms/master/account">Konto andmed</a></li>
+    <li><a id="logout-link">Logi välja</a></li>
+</ul>
+
+
 <div class="container">
     <div class="card">
-        <div id="exercise-list" class="collection">
-            <a href="/exercises.html?exercise-id=1" class="collection-item course-item">Programmeerimine</a>
-            <a href="/exercises.html?exercise-id=2" class="collection-item course-item">Tarkvaraarendus</a>
+        <div id="courses-list" class="collection">
+            <!--<a href="/exercises.html?course-id=1" class="collection-item course-item">Programmeerimine</a>-->
         </div>
     </div>
 </div>
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://idp.lahendus.ut.ee/auth/js/keycloak.js"></script>
