--- a/wui/exercises.html
+++ b/wui/exercises.html
@@ -39,8 +39,30 @@
 
 
 <div class="container">
+    <nav class="clean">
+        <div class="nav-wrapper">
+            <a href="#!" class="breadcrumb">Kursused</a>
+            <a id="course-crumb" href="#!" class="breadcrumb">Programmeerimine</a>
+        </div>
+    </nav>
+
+
     <div class="card">
         <div id="exercises-list" class="collection">
+            <a href="" class="row collection-item exercise-item">
+                <div class="col s2">
+                    1
+                </div>
+                <div class="col s4">
+                    1
+                </div>
+                <div class="col s4">
+                    1
+                </div>
+                <div class="col s2">
+                    1
+                </div>
+            </a>
 
         </div>
     </div>
