wui exercises page get/paint student exercises

--- a/wui/exercises.html
+++ b/wui/exercises.html
@@ -49,21 +49,21 @@
 
     <div class="card">
         <div id="exercises-list" class="collection">
-            <a href="" class="row collection-item exercise-item">
-                <div class="col s2">
-                    1
-                </div>
-                <div class="col s4">
-                    1
-                </div>
-                <div class="col s4">
-                    1
-                </div>
-                <div class="col s2">
-                    1
-                </div>
-            </a>
-
+            <!-- Dummy item -->
+            <!--<a href="" class="row collection-item exercise-item">-->
+                <!--<div class="col s2">-->
+                    <!--1-->
+                <!--</div>-->
+                <!--<div class="col s4">-->
+                    <!--1-->
+                <!--</div>-->
+                <!--<div class="col s4">-->
+                    <!--1-->
+                <!--</div>-->
+                <!--<div class="col s2">-->
+                    <!--1-->
+                <!--</div>-->
+            <!--</a>-->
         </div>
     </div>
 </div>
