wui exercises page use course-title query param

--- a/wui/exercises.html
+++ b/wui/exercises.html
@@ -42,7 +42,7 @@
     <nav class="clean">
         <div class="nav-wrapper">
             <a href="#!" class="breadcrumb">Kursused</a>
-            <a id="course-crumb" href="#!" class="breadcrumb">Programmeerimine</a>
+            <a id="course-crumb" href="#!" class="breadcrumb"></a>
         </div>
     </nav>
 
