wui exercises page get/paint teacher exercises

--- a/wui/exercises.html
+++ b/wui/exercises.html
@@ -49,24 +49,22 @@
 
     <div class="card">
         <div id="exercises-list" class="collection">
-            <!-- Dummy item -->
-            <!--<a href="" class="row collection-item exercise-item">-->
-                <!--<div class="col s2">-->
-                    <!--1-->
-                <!--</div>-->
-                <!--<div class="col s4">-->
-                    <!--1-->
-                <!--</div>-->
-                <!--<div class="col s4">-->
-                    <!--1-->
-                <!--</div>-->
-                <!--<div class="col s2">-->
-                    <!--1-->
-                <!--</div>-->
-            <!--</a>-->
         </div>
     </div>
 </div>
+
+<!-- Teacher exercise item -->
+<a id="teacher-exercise-item" class="row collection-item teacher-exercise-item" style="display: none;">
+    <div class="col s4"></div>
+    <div class="col s5"></div>
+    <div class="col s3 unstarted-wrap"></div>
+    <div class="col s4 title-wrap"></div>
+    <div class="col s5 deadline-wrap"></div>
+    <div class="col s3 started-wrap"></div>
+    <div class="col s4"></div>
+    <div class="col s5"></div>
+    <div class="col s3 completed-wrap"></div>
+</a>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
