--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -51,8 +51,8 @@
     <div class="card">
         <div class="card-tabs center-align">
             <ul id="tabs" class="tabs">
-                <li class="tab"><a href="#exercise">Ülesanne</a></li>
-                <li class="tab active"><a href="#answer">Esitamine</a></li>
+                <li class="tab active"><a href="#exercise">Ülesanne</a></li>
+                <li class="tab"><a href="#answer">Esitamine</a></li>
                 <li class="tab"><a href="#answers">Minu esitused</a></li>
             </ul>
         </div>
