wui exercise page paint teacher submissions

--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -173,7 +173,8 @@
                 </ul>
             </div>
             <div id="student-submissions">
-
+                <div id="teacher-submissions-list" class="collection">
+                </div>
             </div>
             <div id="student-submission">
 
@@ -181,6 +182,14 @@
         </div>
     </div>
 </div>
+
+
+<a id="teacher-submission-item" class="row collection-item teacher-submission-item" style="display: none;">
+    <div class="col s5 teacher-submission-student">nimi</div>
+    <div class="col s5 teacher-submission-time">aeg</div>
+    <div class="col s2 teacher-submission-grade">42/100</div>
+</a>
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
