wui student submit tab autorefresh editor

--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -93,7 +93,7 @@
             </div>
             <div id="submit">
                 <p id="submission-time-wrapper" style="display: none;">
-                    <span class="subheading">Esitamise aeg: </span>
+                    <span class="subheading">Viimase esituse aeg: </span>
                     <span id="submission-time"></span></p>
                 <div id="submission-auto" style="display: none;">
                     <h4>Automaatkontrolli hinnang</h4>
@@ -110,6 +110,7 @@
                         <textarea id="submission"></textarea>
                     </form>
                 </div>
+                <!-- TODO: submit button -->
             </div>
             <div id="my-submissions">
                 <ul class="collapsible expandable">
