wui student submit button

--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -110,14 +110,19 @@
                         <textarea id="submission"></textarea>
                     </form>
                 </div>
-                <!-- TODO: submit button -->
+                <div id="submit-button-wrapper" class="center">
+                    <button id="submit-button" class="waves-effect waves-light btn">Esita</button>
+                </div>
             </div>
+
             <div id="my-submissions">
             </div>
+
             <div id="student-submissions">
                 <div id="teacher-submissions-list" class="collection">
                 </div>
             </div>
+
             <div id="student-submission">
                 <p id="teacher-submission-time-wrapper" style="display: none">
                     <span class="subheading">Esitamise aeg: </span>
