wui student submit

--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -110,7 +110,7 @@
                         <textarea id="submission"></textarea>
                     </form>
                 </div>
-                <div id="submit-button-wrapper" class="center">
+                <div id="submit-button-wrapper" class="center" style="display: none;">
                     <button id="submit-button" class="waves-effect waves-light btn">Esita</button>
                 </div>
             </div>
