--- a/wui/courses.html
+++ b/wui/courses.html
@@ -20,7 +20,6 @@
             <a href="/" class="brand-logo left"><img class="logo-img" src="img/main-logo.svg" alt="Lahendus"/></a>
             <ul id="nav-mobile" class="hide-on-med-and-down">
                 <li><a class="nav-link" href="courses.html">Kursused</a></li>
-                <li><a class="nav-link" href="courses.html">Abi</a></li>
             </ul>
         </div>
     </div>
@@ -40,9 +39,7 @@
 
 <div class="container">
     <div class="card">
-        <div id="courses-list" class="collection">
-            <!--<a href="/exercises.html?course-id=1" class="collection-item course-item">Programmeerimine</a>-->
-        </div>
+        <div id="courses-list" class="collection"></div>
     </div>
 </div>
 
