--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -21,7 +21,6 @@
             <a href="/" class="brand-logo left"><img class="logo-img" src="img/main-logo.svg" alt="Lahendus"/></a>
             <ul id="nav-mobile" class="hide-on-med-and-down">
                 <li><a class="nav-link" href="courses.html">Kursused</a></li>
-                <li><a class="nav-link" href="courses.html">Abi</a></li>
             </ul>
         </div>
     </div>
@@ -42,7 +41,7 @@
 <div class="container">
     <nav class="clean">
         <div class="nav-wrapper">
-            <a href="#!" class="breadcrumb">Kursused</a>
+            <a href="/courses.html" class="breadcrumb">Kursused</a>
             <a id="course-crumb" href="#!" class="breadcrumb"></a>
             <a id="exercise-crumb" href="#!" class="breadcrumb"></a>
         </div>
