--- a/wui/exercises.html
+++ b/wui/exercises.html
@@ -20,7 +20,6 @@
             <a href="/" class="brand-logo left"><img class="logo-img" src="img/main-logo.svg" alt="Lahendus"/></a>
             <ul id="nav-mobile" class="hide-on-med-and-down">
                 <li><a class="nav-link" href="courses.html">Kursused</a></li>
-                <li><a class="nav-link" href="courses.html">Abi</a></li>
             </ul>
         </div>
     </div>
@@ -41,15 +40,13 @@
 <div class="container">
     <nav class="clean">
         <div class="nav-wrapper">
-            <a href="#!" class="breadcrumb">Kursused</a>
+            <a href="/courses.html" class="breadcrumb">Kursused</a>
             <a id="course-crumb" href="#!" class="breadcrumb"></a>
         </div>
     </nav>
 
-
     <div class="card">
-        <div id="exercises-list" class="collection">
-        </div>
+        <div id="exercises-list" class="collection"></div>
     </div>
 </div>
 
