wui exercise submit style

--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -97,7 +97,7 @@
                 <div id="submission-auto" style="display: none;">
                     <h4>Automaatkontrolli hinnang</h4>
                     <pre id="auto-feedback" class="feedback"></pre>
-                    <div>Hinne: <span id="auto-grade"></span></div>
+                    <div>Automaatne hinne: <span id="auto-grade"></span></div>
                 </div>
                 <div id="submission-teacher" style="display: none;">
                     <h4>Õpetaja hinnang</h4>
@@ -129,7 +129,7 @@
                 <div id="teacher-submission-auto" style="display: none;">
                     <h4>Automaatkontrolli hinnang</h4>
                     <pre id="teacher-auto-feedback" class="feedback"></pre>
-                    <div>Hinne: <span id="teacher-auto-grade"></span></div>
+                    <div>Automaatne hinne: <span id="teacher-auto-grade"></span></div>
                 </div>
                 <div id="teacher-submission-teacher" style="display: none;">
                     <h4>Õpetaja hinnang</h4>
