wui separate exercise stylesheet

--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/codemirror.css"/>
     <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/exercise.css"/>
 </head>
 
 <body data-pageid="exercise">
