--- a/wui/students.html
+++ b/wui/students.html
@@ -53,7 +53,7 @@
 
             <a id="add-students-link" href="#!" style="display: none">Lisa õpilasi</a>
             <div id="add-students-wrapper" style="display: none;">
-                <div class="row">
+                <div id="new-students-list-wrapper" class="row">
                     <div class="input-field col s8">
                         <textarea id="new-students-list" class="materialize-textarea"></textarea>
                         <label for="new-students-list">Õpilaste nimekiri</label>
