wui students page get course name

--- a/wui/students.html
+++ b/wui/students.html
@@ -47,8 +47,8 @@
     </nav>
 
     <div class="card">
-        <div class="card-content">
-            <h2 id="course-title">Programmeerimine</h2>
+        <div id="students-container" class="card-content" style="display: none;">
+            <h2 id="course-title"></h2>
             <h4 class="subsection">Õpilased</h4>
 
             <a id="add-students-link" href="#!" style="display: none">Lisa õpilasi</a>
