wui students page help text

--- a/wui/students.html
+++ b/wui/students.html
@@ -53,9 +53,12 @@
 
             <a id="add-students-link" href="#!" style="display: none">Lisa õpilasi</a>
             <div id="add-students-wrapper" style="display: none;">
+                <div id="add-students-help">Õpilaste lisamiseks sisesta kasutajate meiliaadressid
+                    eraldi ridadele või eraldatuna tühikutega.
+                </div>
                 <div id="new-students-list-wrapper" class="row">
                     <div class="input-field col s8">
-                        <textarea id="new-students-list" class="materialize-textarea"></textarea>
+                        <textarea id="new-students-list" class="materialize-textarea" placeholder="oskar@ohakas.ee  mari@maasikas.ee"></textarea>
                         <label for="new-students-list">Õpilaste nimekiri</label>
                     </div>
                     <div class="col s4"></div>
